--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port = 8081
 
     spring.datasource.url = jdbc:mysql://localhost:3306/scm
     spring.datasource.username = scm
-    #spring.datasource.password = 
+    spring.datasource.password = scmscmscm
 
 #jpa conigurations
     spring.jpa.show-sql = true
