created users to login at spring security login page using InMemoryUserDetailsManager

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ server.port = 8081
 #Email Configurations
 
 # Spring Security Configurations
-spring.security.user.name = prabhat
+spring.security.user.name = abc
 spring.security.user.password = abc
 
 
