Implemented own custom spring security[my User implements UserDetails and my SecurityCustomUserDetailsService implements UserDetailsService -> used this in SecurityConfig to set my custom authentication]. Currently every endpoint is secured and no user is there hence, unable to access any endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ server.port = 8081
 
 #Email Configurations
 
-# Spring Security Configurations
-spring.security.user.name = abc
-spring.security.user.password = abc
+# Spring Security Configurations(by default username is user and password is generated in console)
+# spring.security.user.name = abc
+# spring.security.user.password = abc
 
 
