--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
 			<version>3.3.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
