Login with Github completed: [just add client ID and secret for google and github in application.properties to make it run fine]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,18 +21,18 @@ server.port = 8081
     # spring.security.user.name = abc
     # spring.security.user.password = abc
 
-#OAuth2 Google Configurations
+#OAuth2 Google Configurations (/oauth2/authorization/google : http://localhost:8081/login/oauth2/code/google)
     spring.security.oauth2.client.registration.google.client-name = Google
-    spring.security.oauth2.client.registration.google.client-id = 347183594193-30gq77m8c7so1qhdp4jrb6sjkdqoel1p.apps.googleusercontent.com
-    spring.security.oauth2.client.registration.google.client-secret = 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
-    # spring.security.oauth2.client.registration.google.scope = profile,email
+    spring.security.oauth2.client.registration.google.client-id = xyz
+    spring.security.oauth2.client.registration.google.client-secret = xyz
+    spring.security.oauth2.client.registration.google.scope = profile,email
     # spring.security.oauth2.client.registration.google.redirect-uri = http://localhost:8081/login/oauth2/code/google
     # spring.security.oauth2.client.provider.google.authorization-uri = https://accounts.google.com/o/oauth2/auth
     # spring.security.oauth2.client.provider.google.token-uri = https://accounts.google.com/o/oauth2/token
     # spring.security.oauth2.client.provider.google.user-info-uri = https://www.googleapis.com/oauth2/v3/userinfo
     # spring.security.oauth2.client.provider.google.user-name-attribute = sub
 
-#OAuth2 Github Configurations
-    spring.security.oauth2.client.registration.Github.client-name = Github
-    spring.security.oauth2.client.registration.Github.client-id = ierbrg
-    spring.security.oauth2.client.registration.Github.client-secret = wuebffiwe
+#OAuth2 Github Configurations (/oauth2/authorization/github : http://localhost:8081/login/oauth2/code/github)
+    spring.security.oauth2.client.registration.github.client-name = Github
+    spring.security.oauth2.client.registration.github.client-id = xyz
+    spring.security.oauth2.client.registration.github.client-secret = xyz
