fetching user from database using emailID of logged in user and adding it to Model as loggedInUser attribute

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,8 @@ server.port = 8081
 
 #OAuth2 Google Configurations (/oauth2/authorization/google : http://localhost:8081/login/oauth2/code/google)
     spring.security.oauth2.client.registration.google.client-name = Google
-    spring.security.oauth2.client.registration.google.client-id = xyz
-    spring.security.oauth2.client.registration.google.client-secret = xyz
+    spring.security.oauth2.client.registration.google.client-id = 347183594193-26ap8f0vq1pnss3vv75g0fpc4o6ktl4o.apps.googleusercontent.com
+    spring.security.oauth2.client.registration.google.client-secret = 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
     spring.security.oauth2.client.registration.google.scope = profile,email
     # spring.security.oauth2.client.registration.google.redirect-uri = http://localhost:8081/login/oauth2/code/google
     # spring.security.oauth2.client.provider.google.authorization-uri = https://accounts.google.com/o/oauth2/auth
@@ -34,5 +34,5 @@ server.port = 8081
 
 #OAuth2 Github Configurations (/oauth2/authorization/github : http://localhost:8081/login/oauth2/code/github)
     spring.security.oauth2.client.registration.github.client-name = Github
-    spring.security.oauth2.client.registration.github.client-id = xyz
-    spring.security.oauth2.client.registration.github.client-secret = xyz
+    spring.security.oauth2.client.registration.github.client-id = Iv23liwXJsC5mz4PQK04
+    spring.security.oauth2.client.registration.github.client-secret = e222d80b7f0d81fdfa75b822a88f4045c2f4404f
