added Cloudinary dependency | created bean of Cloudinary class using -> {api_key, api_secret, cloud_name} | uploading Multipart file from ContactForm to cloudinary using Cloudinary bean and returning URL | saving URL and cloudinary_public_id fo image to databbase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,10 @@ server.port = 8081
     spring.datasource.username = scm
     spring.datasource.password = scmscmscm
 
+    # create database scm;
+    # create user scm;
+    # grant all privileges on scm.* to scm;
+
 #jpa conigurations
     spring.jpa.show-sql = true
     #for creating schemas and tables
@@ -39,3 +43,8 @@ server.port = 8081
 
 # https://fontawesome.com/
 # https://www.flaticon.com/
+
+# file configs
+    cloudinary.cloud_name = ${Cloudinary_CloudName}
+    cloudinary.api_key = ${Cloudinary_APIKey}
+    cloudinary.api_secret = ${Cloudinary_APISecret}
