View all contacts ready .. for any particular user | showing all the contacts in table using data-th-each

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,8 @@
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 		</dependency>
 
+		<!-- Cloudinary Dependency -->
+
 		<dependency>
 			<groupId>com.cloudinary</groupId>
 			<artifactId>cloudinary-http44</artifactId>
